--- a/index.html
+++ b/index.html
@@ -6,44 +6,50 @@
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css" rel="stylesheet">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-        <title></title>
+        <link rel="stylesheet" href="./src/css/index.css">
+        <link rel="icon" href="./src/img/logo.svg">
+        <title>{007}PAVANMG</title>
     </head>
     <body>
         <div class="container-fluid">
             <div class="row">
-                <div class="d-flex justify-content-between mt-2">
+                <div class="d-flex justify-content-around mt-2 nav_text">
                     <div>
                         <img src="./src/img/logo.svg" alt="" srcset="">
                     </div>
-                    <div class="d-flex justify-content-around">
-                        <div>
-                            <a href="#">Home</a>
-                        </div>
-
-                        <div>
-                            <a href="#">About</a>
-                        </div>
-
-                        <div>
-                            <a href="#">Tech Stack</a>
-                        </div>
-
-                        <div>
-                            <a href="#">Projects</a>
-                        </div>
-
-                        <div>
-                            <a href="#" class="link_text">Contact</a>
-                        </div>
-
-                        <div>
-                            <a href="#" class="text-dark">
-                                <i class="bi bi-github"></i>
-                            </a>
-                        </div>
-                        <div><a href="#"></a></div>
-                        <div><a href="#"></a></div>
+                    <div>
+                        <a href="#" class="text_navbar">Home</a>
                     </div>
+
+                    <div>
+                        <a href="#" class="text_navbar">About</a>
+                    </div>
+
+                    <div>
+                        <a href="#" class="text_navbar">Tech Stack</a>
+                    </div>
+
+                    <div>
+                        <a href="#" class="text_navbar">Projects</a>
+                    </div>
+
+                    <div>
+                        <a href="#" class="text_navbar">Contact</a>
+                    </div>
+
+                    <div>
+                        <a href="#" class="text_navbar">
+                            <img src="./src/img/Vector.svg" alt="">
+                        </a>
+                    </div>
+                    <div>
+                        <a href="#" class="text_navbar">
+                            <img src="./src/img/ant-design_twitter-circle-filled.svg" alt="" srcset="">
+                        </a>
+                    </div>
+                    <div><a href="#" class="text_navbar">
+                        <img src="./src/img/entypo-social_linkedin-with-circle.svg" alt="" srcset="">
+                    </a></div>
                 </div>
             </div>
         </div>
